TrjonaStyle.css
/* ... */
.trojena__footer__social__media__links ul {
  display: flex;
  align-items: center;
}

.trojena__footer__social__media__links ul li:not(:last-child) {
  margin-right: 14px;
}

.trojena__footer__social__media__links ul>li>a>svg:hover {
  scale: 1.1;
  transition: all ease 0.3s;
}

.contact__form__column__1 input::placeholder {
  color: #b2b2b2;
}

.trojena__footer__logo__container {
  width: 87px;
  height: 90px;
  margin-bottom: 14px;
}

/* media queries starts here */

@media screen and (max-width: 960px) {
  .container {
    max-width: 100%;
    margin: 0 auto;
    padding: 0 15px;
  }

  .navbar__logo__container {
    max-width: 166px;
  }

  .hero__banner__section h1 {
    font-size: 32px;
    font-weight: 700;
    line-height: 43px;
    letter-spacing: 0.16em;
    margin-bottom: auto;
    padding-bottom: 89px;
    align-items: flex-end;
  }

  .form__section {
    padding-bottom: 89px;
    padding-top: 40px;
  }

  .form__section h4 {
    font-size: 16px;
    font-weight: 700;
    line-height: 24.96px;
    letter-spacing: 0.16em;
    margin-bottom: 40px;
  }

  .contact__form__row__1,
  .contact__form__row__2 {
    flex-direction: column;
    gap: 0;
  }

  .contact__form__column__1 {
    margin-bottom: 16px;
  }

  .radio__btn__container p {
    margin-top: 19px;
  }

  .radio__btn__container {
    margin-bottom: 28px;
  }

  .bedroom__dropdown__list__container {
    margin-bottom: 28px;
  }

  .country__dropdown__list__container {
    margin-bottom: 28px;
  }

  .form__section p {
    margin-bottom: 36px;
  }

  .contact__form__input__fields {
    flex-direction: column;
    row-gap: 16px;
  }

  .contact__form__input__fields input[type="radio"] {
    margin-left: 0;
    row-gap: 16px;
  }

  .bedroom__dropdown__list__wrapper {
    width: 100%;
  }

  .country__dropdown__list__wrapper {
    width: 100% !important;
  }

  .bedroom__dropdown__list__container select,
  .country__dropdown__list__container select {
    width: 100%;
  }

  .trojena__footer__wrapper {
    flex-direction: column;
    align-items: center;
    padding: 45px 28.5px;
    padding-top: ;
  }

  .trojena__footer__logo__container {
    width: 87px;
    height: 90px;
    margin-bottom: 14px;
  }

  .trojena__footer__social__media__links {
    flex-direction: column;
  }

  .trojena__footer__social__media__links p {
    margin-bottom: 12px;
    margin-right: 0;
  }

  .trojena__footer__social__media__links ul li:not(:last-child) {
    margin-right: 35px;
  }
}

/* media queries ends here */
.iti__country-list {
  width: auto;
}

.iti--separate-dial-code .iti__selected-flag {
  width: auto;
}

.iti__selected-country-primary {
  padding-left: 17px;
}

.iti--allow-dropdown input.iti__tel-input,
.iti--allow-dropdown input.iti__tel-input[type="text"],
.iti--allow-dropdown input.iti__tel-input[type="tel"] {
  padding-left: 63px;
}

.cta__button {
  background-color: #f59f40;
  color: #fff;
  font-size: 17px;
  font-weight: 400;
  border-radius: 100px;
  line-height: 1;
  text-transform: uppercase;
  transition: all ease-out 0.4s;
  outline: none;
  border: none;
  line-height: 16.15px;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 44px;
  padding: 16px 24px;
}

.cta__button:hover {
  background-color: #dd8f3a;
}

header {
  position: sticky;
  background: #fff;
  z-index: 999;
  top: 0;
  padding: 16px 0;
  border-bottom: 0.5px solid #b2b2b2;
}

.logo__container {
  width: 216.7px;
  height: auto;
}

.thanks__note__content__wrapper svg {
  width: 67px;
  height: auto;
  margin-bottom: 20px;
}

.cta__button a {
  color: #fff;
}

.thanks__note__content__wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-top: 100px;
  padding-bottom: 134px;
}

.thanks__note__content__wrapper h3 {
  font-size: 32px;
  font-weight: 700;
  line-height: 40px;
  text-align: center;
  color: var(--black-color);
  max-width: 454px;
  margin-bottom: 20px;
  text-transform: uppercase;
}

.thanks__note__content__wrapper p {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: center;
  color: var(--black-color);
  max-width: 519px;
  margin-bottom: 70px;
}

.thanks__note__content__wrapper span {
  font-size: 16px;
  font-weight: 700;
  line-height: 15.68px;
  letter-spacing: 0.16em;
  color: var(--black-color);
  margin-bottom: 16px;
  text-transform: uppercase;
}

.trojena__footer {
  background-color: var(--white-color);
}

.trojena__footer__wrapper__thankyou {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-bottom: 57px;
}

.trojena__footer__wrapper p {
  font-size: 14px;
  font-weight: 400;
  line-height: 21.84px;
  letter-spacing: 0.16em;
  color: var(--black-color);
  margin-bottom: 0;
}

.trojena__footer__social__media__links {
  display: flex;
  align-items: center;
}

.trojena__footer__social__media__links ul {
  display: flex;
  align-items: center;
}

.trojena__footer__social__media__links ul li:not(:last-child) {
  margin-right: 14px;
}
.trojena__footer__social__media__links ul li a img{
  height: 42px;
  width: 42px;
  object-fit: contain;
}

.trojena__footer__social__media__links ul>li>a>svg:hover {
  scale: 1.1;
  transition: all ease 0.3s;
}

.iti--inline-dropdown .iti__dropdown-content {
  width: max-content !important;
  z-index: 100;
}
.marketing__permission__radio__btn__container{
  margin-bottom: 33px;
}
/* ... */

